2001-06-21 18:20 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     * Reinstated test for continuation token at the end of an Expression in isExpress()
       /* Clipper does not validate extracted expression like that, but Harbour PP has internal dependancy due to matching logic.
          Alexander, Clipper stops an expression when encountering the Anchor of the next NON optional Match Marker.
          Clipper accepts that expression even if it ends with continuation token (like '*').
       */

2001-06-21 14:55 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     * Commented out test for continuation token at the end of an Expression in isExpress()
       /* Clipper does not validate extracted expression like that. This solves problem with:
          SAVE ALL LIKE Patt* TO File
        */

2001-06-21 14:05 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Revised explicit support for Extended expression match marker, in NextExp() to use normal logic for () expresiions.

2001-06-21 10:50 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Changed MatchRule() to set sNextAnchor (for NextExp()) by skipping to next NON optional Anchor.

2001-06-21 10:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Changed MatchRule() to set sNextAnchor (for NextExp()) ONLY for NON optional Anchor.

2001-06-21 09:50 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     + Added explicit support for Extended expression match marker, in NextExp()

2001-06-21 13:20 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/debug/debugger.prg
     * partially fixed cursor appearance on debug screen

2001-06-21 10:25 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rtl/inkey.c
     + added static variable s_altdPressed, which is set after pressing Alt-D
     + added function isAltdPressed(), which return a value of s_altdPressed